Fixed navbar spacing issues

--- a/css/products.css
+++ b/css/products.css
@@ -40,7 +40,7 @@ ul.navbar {
 
 /*This is formatting for the contents of each block*/
 .navbar li a {
-    width: 20%;
+    width: 5em;
     font-family: 'Nunito', sans-serif;
     font-size: 1.25vw;
     display: inline-block;
